# pywhispercpp

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  version.txt
.github/workflows/: conda.yml  docs.yml  format.yml  pip.yml  wheels.yml
docs/: index.md
pywhispercpp/: __init__.py  constants.py  model.py  utils.py
pywhispercpp/examples/: assistant.py  livestream.py  main.py  recording.py
search/: search_index.json
src/: main.cpp
tests/: test_c_api.py  test_model.py
